Update component templates

--- a/directory_components/templates/404.html
+++ b/directory_components/templates/404.html
@@ -1,11 +1,20 @@
 {% extends 'directory_components/base.html' %}
 
-{% load content_404 from directory_components %}
-
 {% block head_title %}This page cannot be found{% endblock %}
 
 {% block content %}
-    {% content_404 feedback_url=services_urls.contact_us home_page_url=services_urls.exred %}
+<section class="p-v-xxl">
+  <div class="container">
+    <div class="w-2-3">
+      <h1 class="h-l">This page cannot be found</h1>
+      <ul class="list list-bullet">
+          <li>If you entered a web address please check it’s correct.</li>
+          <li>If you followed a link here, <a class="link" href="{{ services_urls.feedback }}">let us know</a>.</li>
+          <li><a class="link" href="{{ services_urls.exred }}">Go to the homepage</a></li>
+      </ul>
+    </div>
+  </div>
+</section>
 {% endblock %}
 
 {% block feedback_reporter %}{% endblock %}
