--- a/directory_components/templates/directory_components/form_widgets/form.html
+++ b/directory_components/templates/directory_components/form_widgets/form.html
@@ -1,8 +1,13 @@
 {% if form.non_field_errors %}
-  <div class="error-message margin-bottom-30">
-    <div class="{{ form.error_css_class }}">
-      {{ form.non_field_errors }}
-    </div>
+  <div class="error-summary">
+    {% if form.error_summary_heading %}
+      <h2 class="h-m text-grey">{{ form.error_summary_heading }}</h2>
+    {% endif %}
+    <ul class="list list-bullet">
+      {% for error in form.non_field_errors %}
+        <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
   </div>
 {% endif %}
 {% for field in form.visible_fields %}
