--- a/directory_components/templates/directory_components/form_widgets/form_field.html
+++ b/directory_components/templates/directory_components/form_widgets/form_field.html
@@ -1,4 +1,4 @@
-<div class="{{ field.css_classes }}" id="{{ field.id_for_label }}-container">
+<div class="{{ field.css_classes }} form-field-container" id="{{ field.id_for_label }}-container">
   {% if field.label %}{{ field.label_tag }}{% endif %}
   {% if field.errors %}
     <div class="error-message">{{ field.errors }}</div>
