--- a/directory_components/templates/directory_components/header_footer/domestic_header.html
+++ b/directory_components/templates/directory_components/header_footer/domestic_header.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<header id="great-domestic-header" class="great-header" dir="ltr" data-ga-section="header">
+<header id="great-domestic-header" class="g-header g-domestic-header" dir="ltr" data-ga-section="header">
   {% include 'directory_components/header_footer/global_header.html' with header_class="domestic" %}
 
   <div class="menu">
