--- a/directory_components/templates/directory_components/header_footer/international_header.html
+++ b/directory_components/templates/directory_components/header_footer/international_header.html
@@ -1,9 +1,7 @@
 {% load static %}
 {% load i18n %}
 
-{% include 'directory_components/header_footer/header_country_select.html' %}
-
-<header id="great-international-header" class="great-header" dir="ltr" data-ga-section="header">
+<header id="great-international-header" class="g-header g-international-header" dir="ltr" data-ga-section="header">
   {% include 'directory_components/header_footer/global_header.html' with header_class="international" %}
 
   <div class="menu">
@@ -15,7 +13,6 @@
       {% endblock %}
 
       <div class="extra-links">
-        {% include 'directory_components/header_footer/country_switcher.html' %}
         {% include 'directory_components/header_footer/language_switcher.html' %}
       </div>
 
