--- a/directory_components/templates/directory_components/header_footer/international_header_desktop_sub_nav.html
+++ b/directory_components/templates/directory_components/header_footer/international_header_desktop_sub_nav.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 {% if tier_two_items %}
-  <div class="great-sub-header">
+  <div class="g-sub-header">
     <nav class="sub-nav" aria-label="{% trans 'Sub-menu' %}">
       <ul class="sub-nav-list">
         {% for header_item in tier_two_items %}
