--- a/directory_components/templates/directory_components/image_with_caption.html
+++ b/directory_components/templates/directory_components/image_with_caption.html
@@ -1,5 +1,5 @@
 
-<figure class="image-with-caption">
+<figure class="g-image-with-caption">
     <img src="{% firstof img_url image_url image_src img_src image %}" alt="{{ alt_text }}">
   {% if main_caption or sub_caption %}
   <figcaption class="caption">
