--- a/directory_components/templates/directory_components/accordion_item.html
+++ b/directory_components/templates/directory_components/accordion_item.html
@@ -1,11 +1,9 @@
 {% load add_export_elements_classes from directory_components %}
 
-<details closed class="great-accordion">
-  <summary class="width-full">
-    <span class="bold-small link">{{ item.heading }}</span>
-  </summary>
+<details closed class="g-accordion">
+  <summary class="w-full link">{{ item.heading }}</summary>
   {% block content %}
-  <div class="width-full width-two-thirds-m">
+  <div class="w-full w-2-3-m">
     {{ item.content|add_export_elements_classes }}
   </div>
   {% endblock %}
