--- a/directory_components/templates/directory_components/accordion_list.html
+++ b/directory_components/templates/directory_components/accordion_list.html
@@ -1,5 +1,5 @@
 
-<div class="great-accordion-list">
+<div class="g-accordion-list">
   {% for item in items %}
     {% include "directory_components/accordion_item.html" with item=item %}
   {% endfor %}
