--- a/directory_components/templates/directory_components/card_with_icon.html
+++ b/directory_components/templates/directory_components/card_with_icon.html
@@ -20,7 +20,7 @@
       {{ html_content }}
       {% else %}
         {% if title %}
-          <h3 class="heading-large">{{ title }}</h3>
+          <h3 class="h-l">{{ title }}</h3>
         {% endif %}
         {% if description %}
         <p class="description">{{ description }}</p>
