--- a/directory_components/templates/directory_components/case_study.html
+++ b/directory_components/templates/directory_components/case_study.html
@@ -1,22 +1,19 @@
 
 <section
   {% if section_id or id %}id="{% firstof section_id id %}"{% endif %}
-  data-ga-section="caseStudy"
-  class="great-case-study {% if background_tint %}background-tint{% endif %}"
-  style="background-image: url({% firstof background_image_url background_image img_url image_url image_src img_src image %})" data-ga-section="caseStudy">
+  class="g-case-study p-v-xl-l p-v-l {% if background_tint %}background-tint{% endif %}"
+  style="background-image: url({% firstof background_image_url background_image img_url image_url image_src img_src image %})">
   <div class="container">
-    <div class="grid-row">
-      <div class="column-full column-two-thirds-l column-half-xl">
-        <div class="width-half-all border-thin border-flag-red"></div>
-        <h2 class="heading-large">{% firstof title heading %}</h2>
-          <img class="only-display-tablet width-full margin-bottom-15" src="{% firstof background_image_url background_image img_url image_url image_src img_src image %}" alt="">
-        {% block content %}
-        <p>{% firstof subtitle description %}</p>
-        {% if cta_link and cta_text %}
-          <a class="button button-arrow-small margin-top-15-l" href="{{ cta_link }}">{{ cta_text }}</a>
-        {% endif %}
-        {% endblock %}
-      </div>
+    <div class="content w-full w-2-3-l w-1-2-xl">
+      <div class="w-1-2-all border-thin border-flag-red"></div>
+      <h2 class="h-l">{% firstof title heading %}</h2>
+        <img class="display-mobile-tablet w-full" src="{% firstof background_image_url background_image img_url image_url image_src img_src image %}" alt="">
+      {% block content %}
+      <p>{% firstof subtitle description %}</p>
+      {% if cta_link and cta_text %}
+        <a class="g-button m-bottom-0" href="{{ cta_link }}">{{ cta_text }}</a>
+      {% endif %}
+      {% endblock %}
     </div>
   </div>
 </section>
