--- a/directory_components/templates/directory_components/header_footer/domestic_footer.html
+++ b/directory_components/templates/directory_components/header_footer/domestic_footer.html
@@ -4,11 +4,11 @@
 {% block global_footer_class %}domestic{% endblock %}
 
 {% block footer_left_logo %}
-    <img class="great-footer-right-logo" width="180" id="great-footer-great-logo" src="{% static 'directory_components/images/great.svg' %}" alt="Great Britain and Northern Ireland"/>
+    <img class="g-footer-right-logo" width="180" id="great-footer-great-logo" src="{% static 'directory_components/images/great.svg' %}" alt="Great Britain and Northern Ireland"/>
 {% endblock %}
 
 {% block global_footer_logo %}
-    <img id="great-global-footer-logo" class="great-global-header-footer-logo" alt="Department for International Trade" height="21" src="{% static 'directory_components/images/dit-logo.svg' %}">
+    <img id="great-global-footer-logo" class="g-global-header-footer-logo" alt="Department for International Trade" height="21" src="{% static 'directory_components/images/dit-logo.svg' %}">
 {% endblock %}
 
 {% block footer_performance_link %}
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block footer_domestic_international_link %}
-  <li class="great-footer-domestic-international-link">
+  <li class="g-footer-domestic-international-link">
     <a id="footer-international" href="{{ services_urls.great_international }}">Go to the page for international businesses</a>
   </li>
 {% endblock %}
