--- a/directory_components/templates/directory_components/header_footer/language_switcher.html
+++ b/directory_components/templates/directory_components/header_footer/language_switcher.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 {% if language_switcher.show %}
-  <div id="great-header-language-switcher" class="great-header-language-switcher great-header-form">
+  <div id="great-header-language-switcher" class="g-header-language-switcher g-header-form">
     {% language request.LANGUAGE_CODE %}
       <form class="languages" action="" method="get">
         {% for key, value in request.GET.items %}
@@ -11,7 +11,7 @@
         {% endfor %}
         {% block language_form_inner %}{% endblock %}
         <label for="great-header-language-select">{% trans 'Language' %}</label>
-        <span id="great-header-language-display" class="great-header-language-display" aria-hidden="true"></span>
+        <span id="great-header-language-display" class="g-header-language-display" aria-hidden="true"></span>
           {{ language_switcher.form.lang }}
         <button id="great-header-language-submit" type="submit">{% trans 'Select' %}</button>
       </form>
