--- a/directory_components/templates/directory_components/header_footer/search.html
+++ b/directory_components/templates/directory_components/header_footer/search.html
@@ -1,5 +1,5 @@
-<div id="great-header-search-wrapper" class="great-header-search-wrapper">
-  <div class="great-header-search-container">
+<div id="great-header-search-wrapper" class="g-header-search-wrapper">
+  <div class="g-header-search-container">
     <form id="great-header-search-form" action="{{ header_footer_urls.search }}" method="GET">
       <input id="great-header-search-box" type="text" name="q" placeholder="Search" aria-label="Search">
       <button type="submit">Search</button>
