--- a/directory_components/templates/directory_components/hero.html
+++ b/directory_components/templates/directory_components/hero.html
@@ -1,17 +1,14 @@
 
-<section class="great-hero {% if not image %}great-hero-no-image{% endif %}" id="hero" {% if image %}style="background-image: url({{ image }})"{% endif %}>
+<section class="g-hero {% if not image %}g-hero-no-image{% endif %}" id="hero" {% if image %}style="background-image: url({{ image }})"{% endif %}>
   <div class="container">
-    <div class="great-hero-title">
+    <div class="g-hero-title">
       {% if hero_subheading %}
-        <h1 id="hero-heading" class="great-hero-heading with-subheading">
-          <span class="great-hero-subheading">{{ hero_subheading }}</span>
+        <h1 id="hero-heading" class="g-hero-heading with-subheading">
+          <span class="g-hero-subheading">{{ hero_subheading }}</span>
           <span>{{ hero_text }}</span>
         </h1>
       {% else %}
-        <h1 class="great-hero-heading" id="hero-heading">{{ hero_text }}</h1>
-      {% endif %}
-      {% if description %}
-      <p class="great-hero-description" id="hero-description">{{ description }}</p>
+        <h1 class="h-l" id="hero-heading">{{ hero_text }}</h1>
       {% endif %}
     </div>
   </div>
