--- a/directory_components/templates/directory_components/hero_with_cta.html
+++ b/directory_components/templates/directory_components/hero_with_cta.html
@@ -1,17 +1,17 @@
 
 <section class="great-hero {% if not image %}great-hero-no-image{% endif %}" id="hero" {% if image %}style="background-image: url({{ image }})"{% endif %}>
-  <div class="container padding-top-90-l padding-top-45 padding-bottom-45-l">
-    <div class="great-hero-text width-half-xl width-two-thirds-l width-full">
-      <h1 class="heading-xlarge {% if subheading %} margin-bottom-0 {% else %} margin-bottom-30 {% endif %} ">{{ heading }}</h1>
+  <div class="container">
+    <div class="great-hero-text w-1-2-xl w-2-3-l w-full">
+      <h1 class="h-xl">{{ heading }}</h1>
       {% block content %}
       {% if subheading %}
-      <h2 class="heading-xlarge margin-top-0 margin-bottom-30">{{ subheading }}</h2>
+        <h2 class="h-xl">{{ subheading }}</h2>
       {% endif %}
       {% if subtitle %}
-      <p class="margin-bottom-45">{{ subtitle }}</p>
+        <p>{{ subtitle }}</p>
       {% endif %}
       {% if cta_text and cta_link %}
-        <a href="{{ cta_link }}" class="button button-blue margin-bottom-30">{{ cta_text }}</a>
+        <a href="{{ cta_link }}" class="g-button button-blue margin-bottom-30">{{ cta_text }}</a>
       {% endif %}
       {% endblock %}
     </div>
