--- a/directory_components/templates/directory_components/informative_banner.html
+++ b/directory_components/templates/directory_components/informative_banner.html
@@ -1,13 +1,12 @@
 {% load add_export_elements_classes from directory_components %}
-<div class="container">
-    <div class="informative-banner">
-        <div>
-            {% if banner_label %}
-                <h2>{{ banner_label }}</h2>
-            {% endif %}
-            {% if banner_content %}
-                {{ banner_content|add_export_elements_classes }}
-            {% endif %}
-        </div>
-    </div>
+
+<div class="g-banner-info">
+  <div class="w-3-4">
+    {% if banner_label %}
+      <h2>{{ banner_label }}</h2>
+    {% endif %}
+    {% if banner_content %}
+      {{ banner_content|add_export_elements_classes }}
+    {% endif %}
+  </div>
 </div>
