--- a/directory_components/templates/directory_components/message_box_with_icon.html
+++ b/directory_components/templates/directory_components/message_box_with_icon.html
@@ -1,9 +1,9 @@
-<div class="message-box-with-icon border-medium border-{{ border_colour|default:'teal' }} {{ box_class|default:'width-full background-white' }}">
-  <div class="message-box-icon font-large white-text background-{{ border_colour|default:'teal' }}" aria-hidden="true">{{ icon|default:'✓' }}</div>
-  <div class="message-box-content padding-15 padding-30-m">
+<div class="g-message-box-with-icon border-medium border-{{ border_colour|default:'teal' }} {{ box_class|default:'w-full bg-white' }}">
+  <div class="g-message-box-icon font-large text-white bg-{{ border_colour|default:'teal' }}" aria-hidden="true">{{ icon|default:'✓' }}</div>
+  <div class="g-message-box-content">
     {% block content %}
     {% if heading %}
-      <{{ heading_level|default:'h3' }} class="box-heading heading-medium {{ heading_class|default:'teal-text' }}">{{ heading }}</{{ heading_level|default:'h3' }}>
+      <{{ heading_level|default:'h3' }} class="box-heading h-m {{ heading_class|default:'text-teal' }}">{{ heading }}</{{ heading_level|default:'h3' }}>
     {% endif %}
     <p class="box-description">{{ description }}</p>
     {% endblock %}
