--- a/demo/templates/demo/atoms/typography.html
+++ b/demo/templates/demo/atoms/typography.html
@@ -13,7 +13,7 @@
   </thead>
   <tr>
     <td class="font-brand">.font-brand</td>
-    <td>Styles text with the main brand typeface.</td>
+    <td>Styles text with the main brand typeface. <br>Note: we only use this typeface in one weight which is bold (700).</td>
   </tr>
   <tr>
     <td class="font-body">.font-body</td>
