--- a/demo/templates/demo/atoms/button.html
+++ b/demo/templates/demo/atoms/button.html
@@ -4,6 +4,8 @@
 {% load demo_tags %}
 {% load great_components %}
 
+{% block head_title %}Buttons{% endblock %}
+
 {% block content %}
 
 <section>
