--- a/demo/templates/demo/atoms/colour.html
+++ b/demo/templates/demo/atoms/colour.html
@@ -2,6 +2,8 @@
 
 {% load message_box_with_icon from great_components %}
 
+{% block head_title %}Colour{% endblock %}
+
 {% block inner_content %}
 
 <article class="w-2-3">
