--- a/demo/templates/demo/atoms/grid.html
+++ b/demo/templates/demo/atoms/grid.html
@@ -62,7 +62,7 @@
 </div>
 
 <h2 class="h-l">.flex-grid</h2>
-<p>To align the heights of elements with different lengths of content, use <code>.flex-grid</code>. This adds <code>flex-grow: 1</code> to grandchildren of the <code>flex-grid</code> i.e. elements that are direct children of the grid columns.</p>
+<p class="w-2-3">To align the heights of elements with different lengths of content, use <code>.flex-grid</code>. This adds <code>flex-grow: 1</code> to grandchildren of the <code>flex-grid</code> i.e. elements that are direct children of the grid columns.</p>
 <div class="bg-stone-30 p-s m-bottom-s">
   <div class="flex-grid">
     <div class="c-1-3">
@@ -82,5 +82,36 @@
     </div>
   </div>
 </div>
+
+<h2 class="h-l">Width</h2>
+<p class="w-2-3">Width <code>w-</code> classes can be used to give a single element a percentage width of its container. These cannot be used inside one of the grids above.</p>
+
+<div class="bg-stone-30 p-s m-b-s">
+  <div class="w-1-6">
+    <p class="p-s bg-white">w-1-6</p>
+  </div>
+  <div class="w-1-5">
+    <p class="p-s bg-white">w-1-5</p>
+  </div>
+  <div class="w-1-4">
+    <p class="p-s bg-white">w-1-4</p>
+  </div>
+  <div class="w-1-3">
+    <p class="p-s bg-white">w-1-3</p>
+  </div>
+  <div class="w-2-3">
+    <p class="p-s bg-white">w-2-3</p>
+  </div>
+  <div class="w-3-4">
+    <p class="p-s bg-white">w-3-4</p>
+  </div>
+  <div class="w-5-12">
+    <p class="p-s bg-white">w-5-12</p>
+  </div>
+  <div class="w-7-12">
+    <p class="p-s bg-white">w-7-12</p>
+  </div>
+</div>
+
 
 {% endblock %}
