--- a/demo/templates/demo/atoms/typography.html
+++ b/demo/templates/demo/atoms/typography.html
@@ -33,6 +33,41 @@
   </tr>
 </table>
 
+<h3 class="h-m">Headings</h3>
+
+<p class="w-2-3">Use these heading classes to change the size of headings while still keeping HTML semantic. To match up with the base line height, each heading takes up the height of a different multiple of the base line height according to its font size.</p>
+<table class="demo-heading-table">
+  <thead>
+    <th>Class</th>
+    <th>Number of lines</th>
+  </thead>
+  <tr>
+    <td>
+      <span class="c-1-2 h-xl">.h-xl</span>
+    </td>
+    <td>3</td>
+  </tr>
+  <tr>
+    <td>
+      <span class="c-1-2 h-l">.h-l</span>
+    </td>
+    <td>3</td>
+  </tr>
+  <tr>
+    <td>
+      <span class="c-1-2 h-m">.h-m</span>
+    </td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>
+      <span class="c-1-2 h-s">.h-s</span>
+    </td>
+    <td>2</td>
+  </tr>
+</table>
+
+
 <section class="w-2-3">
   <h2 class="h-l">Example of article styling</h2>
 
