--- a/demo/templates/demo/index.html
+++ b/demo/templates/demo/index.html
@@ -3,6 +3,6 @@
 {% block inner_content %}
   <h1 class="h-xl">great-components v{{ version }}</h1>
 
-  <p>Hello, world! This is the demo page for <a href="https://github.com/uktrade/great-components" class="link" title="Go to great-components on GitHub" target="_blank" rel="noopener noreferrer">great-components</a>. From here you can preview all the components and styling that can be used when you import this module.</p>
+  <p class="w-2-3">Hello, world! This is the demo page for <a href="https://github.com/uktrade/great-components" class="link" title="Go to great-components on GitHub" target="_blank" rel="noopener noreferrer">great-components</a>. From here you can preview all the components and styling that can be used when you import this module.</p>
 
 {% endblock %}
