Upgrade for Django 3.2

--- a/great_components/templates/great_components/base.html
+++ b/great_components/templates/great_components/base.html
@@ -1,4 +1,4 @@
-{% load static from staticfiles %}
+{% load static %}
 {% load i18n %}
 {% load static_absolute from great_components %}
 {% get_current_language_bidi as LANGUAGE_BIDI %}
