add block for inline feedback inside body tags

--- a/great_components/templates/great_components/base.html
+++ b/great_components/templates/great_components/base.html
@@ -113,6 +113,9 @@
             </main>
         {% endblock %}
 
+        {% block body_inline_feedback %}
+        {% endblock %}
+
         {% block body_footer %}
             {% include 'great_components/header_footer/domestic_footer.html' %}
         {% endblock %}
