--- a/great_components/templates/great_components/base.html
+++ b/great_components/templates/great_components/base.html
@@ -18,7 +18,13 @@
         {% endblock %}
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+        <meta name="intranet:environment" content="{{ sentry.APP_ENVIRONMENT }}">
+        <meta name="intranet:sentry:dsn"
+              content="{{ sentry.SENTRY_DSN|default_if_none:'' }}">
+        <meta name="intranet:sentry:browser-traces-sample-rate"
+              content="{{ sentry.SENTRY_BROWSER_TRACES_SAMPLE_RATE }}">
+
+
         {% block head_favicon %}
             <link href='{% static 'great_components/images/favicon-192x192.png' %}' rel='shortcut icon' type='image/png'>
             <!--[if IE]> <link rel="icon" href="{% static 'great_components/images/favicon.ico' %}" type="image/x-icon" /> <![endif]-->
@@ -42,6 +48,8 @@
         {% block vendor_js %}
             <script src="{% static 'great_components/js/vendor/details-polyfill.js' %}"></script>
             <script src="{% static 'great_components/js/vendor/jquery-3.5.0.min.js' %}"></script>
+            <script src="{% static 'great_components/js/vendor/sentry.6.19.7.tracing.replay.min.js' %}"></script>
+            <script src="{% static 'great_components/js/vendor/sentryinit.js' %}"></script>
         {% endblock %}
 
         {% block head_js %}
